Teste modelo com textura e com indicação de texto

--- a/css/pages/modelos/modelos-3d.css
+++ b/css/pages/modelos/modelos-3d.css
@@ -14,7 +14,7 @@
     align-items: center;
     justify-content: center;
     margin: 0 auto;
-    background-color: gray;
+    background-color: rgb(53, 53, 53);
 }
 
 .descricao{
